# Veles

./: .gitignore  Cargo.toml  LICENSE  README-rus.md  README.md
scripts/: add-to-lmstudio.sh  install-opencode.sh
src/: browser.rs  config.rs  error.rs  extract.rs  fetch.rs  main.rs  rate_limit.rs  search.rs  server.rs  state.rs  tools.rs
