[package]
name = "veles"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
html2md = "0.2.15"
moka = { version = "0.12.15", features = ["future"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "gzip", "brotli", "deflate", "charset", "http2", "query"] }
rmcp = { version = "1.6.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "sync", "io-std", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
